--- a/.github/workflows/CursoDjandoCI.yml
+++ b/.github/workflows/CursoDjandoCI.yml
@@ -24,4 +24,5 @@ jobs:
     - name: Lint with flake8
       run: |
         pipenv run flake8 .
-        pipenv run pytest
+        pipenv run pytest --cov=pypro
+        pipenv run codecov
