--- a/.github/workflows/CursoDjandoCI.yml
+++ b/.github/workflows/CursoDjandoCI.yml
@@ -9,6 +9,16 @@ jobs:
       PIPENV_IGNORE_VIRTUALENVS: 1
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:13.5
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
+        ports: ['5432:5432']
+
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
