--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ gunicorn = "*"
 python-decouple = "*"
 dj-database-url = "*"
 psycopg2-binary = "*"
+cloudinary = "*"
+django-cloudinary-storage = "*"
 
 [dev-packages]
 flake8 = "*"
