--- a/.github/workflows/CursoDjandoCI.yml
+++ b/.github/workflows/CursoDjandoCI.yml
@@ -36,4 +36,9 @@ jobs:
       run: |
         pipenv run flake8 .
         pipenv run pytest --cov=pypro
+
+    - name: Coverage
+      env:
+        CODECOV_TOKEN: '13c61f04-79eb-4bc6-b3f3-080cc90faa6b'
+      run: |
         pipenv run codecov
