Construçao pagina de detalhes do modulo

--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ collectfast = "*"
 whitenoise = "*"
 django-debug-toolbar = "*"
 sentry-sdk = "*"
+django-ordered-model = "*"
 
 [dev-packages]
 flake8 = "*"
