--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ whitenoise = "*"
 django-debug-toolbar = "*"
 sentry-sdk = "*"
 django-ordered-model = "*"
+ipython = "*"
+django-extensions = "*"
 
 [dev-packages]
 flake8 = "*"
